# qa-base-mvp

./: .env.example  .gitignore  BROWSER_USE_ARCHITECTURE.md  CELERY_PLAN_GENERATION_PLAN.md  DOKKU_DEPLOYMENT.md  QA_BROWSER_AGENT_PLAN.md  docker-compose-dokploy.yaml  docker-compose.yaml  my_workflow.json  now create a qa browser automation ui.md  record_workflow.py
auto-heal-test/: index.html  package-lock.json  package.json
auto-heal-test/src/: App.css  App.jsx
backend/: Dockerfile  alembic.ini  nginx.conf.sigil  pyproject.toml
backend/alembic/: env.py
backend/app/: __init__.py  celery_app.py  config.py  database.py  deps.py  main.py  models.py  schemas.py
backend/scripts/: create_organization.py
browser_use/: __init__.py  cli.py  pyproject.toml
browser_use/agent/: qa_agent.py  service.py  views.py
browser_use/agent/message_manager/: service.py
browser_use/agent/system_prompts/: system_prompt.md  system_prompt_qa_act.md  system_prompt_qa_plan.md
browser_use/browser/: demo_mode.py  profile.py
browser_use/browser/watchdogs/: aboutblank_watchdog.py  dom_watchdog.py
browser_use/tools/: qa_tools.py  service.py  views.py
config/: deploy.backend.yml  deploy.frontend.yml  deploy.yml
docker/browser-vnc/: Dockerfile  (+10 more)
docs/: QA_TEST_FAILURE_HANDLING.md
frontend/: Dockerfile  Dockerfile.prod  index.html  nginx.conf  package-lock.json  package.json
test-browser/: Dockerfile  Dockerfile.minimal  MINIMAL_SETUP.md  README.md  SIZE_ANALYSIS.md  docker-compose.browsers.yaml  docker-compose.minimal.yaml  docker-compose.yaml  fluxbox-init  supervisord.conf
(+169 files in other folders)
